css/onhb11_tarefona.scss
// @import "01-jeanluc.scss";
// @import "02-infini.scss";
@import "03-syne.scss";

$m: 24px;

$paper: rgb(255, 240, 224);

$palettes: (
  /* Sol de sábado */ (rgb(255, 83, 11), rgb(0, 185, 154)),
  /* Sol de segunda */ (rgb(0, 155, 217), rgb(188, 132, 208)),
  /* Paisagem celta */ (rgb(0, 173, 123), rgb(255, 84, 80)),
  /* A Solidão das pedras */ (rgb(162, 103, 135), rgb(85, 143, 162))
);

body {
  background: #ddd;
  // font-family: "JeanLucWeb-Thin", sans-serif;
  // font-family: "IBM Plex Mono", monospace;
  // font-family: "IBM Plex Serif", serif;

  // font-family: "Infini", sans-serif;
  // font-family: "Yatra One", cursive;

  font-family: "Syne", cursive;
  font-weight: bold;
  font-style: italic;

  font-family: "Gangster Grotesk", sans-serif;
  font-weight: normal;
  font-weight: bold;

  font-size: 40px;
}

img {
  max-width: 100%;
}

.spreads {
  margin: $m * 3 auto;
  display: grid;
  grid-template-columns: 1fr 1fr;
  width: calc(100% - #{2 * $m});
  max-width: 960px;
  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
}

.sepiaish-img {
  filter: grayscale(90%) sepia(30%);
}

.pages {
  background: $paper;
  position: relative;
  min-height: calc(480px * 1.4 - #{$m});
  &:after {
    width: $m * 2;
    position: absolute;
    content: "";
    top: 0;
    bottom: 0;
    mix-blend-mode: multiply;
    z-index: 10;
  }

  $shade: mix(rgba(0, 0, 0, 0.5), $paper);

  &:nth-child(odd):after {
    right: 0;
    background-image: linear-gradient(to right, transparent, $shade);
    border-right: 1px solid mix(black, $shade);
  }
  &:nth-child(even):after {
    border-left: 1px solid mix(white, $shade);
    left: 0;
    background-image: linear-gradient(to right, $shade, transparent);
  }

  // jean luc
  font-family: "IBM Plex Serif", serif;
  font-size: 11px;

  &#page1 {
    position: relative;
    overflow: hidden;

    header {
      position: absolute;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;
      z-index: 2;
      & > * {
        z-index: 3;
      }
      &:before {
        position: absolute;
        content: "";
        left: 0;
        right: 50%;
        bottom: 0;
        top: 0;
        background: linear-gradient(to right, rgba(0, 0, 0, 0.4), transparent);
        mix-blend-mode: multiply;
        z-index: 2;
      }
    }

    h1 {
      font-family: "JeanLucWeb-Thin", sans-serif;
      font-weight: normal;
      font-size: 38px;
      line-height: 34px;
      color: nth(nth($palettes, 1), 1);
      text-transform: uppercase;

      box-sizing: border-box;
      position: absolute;
      bottom: $m;
      padding: $m;
      width: 50%;
      background: black;
    }

    h2 {
      box-sizing: border-box;
      position: absolute;
      top: $m;
      width: 50%;
      padding: $m;
      background: nth(nth($palettes, 1), 2);
      color: white;
      font-style: italic;
      font-size: 23px;
      line-height: 25px;
      font-weight: bold;
      span {
        position: absolute;
        margin-top: $m * 8/5;
        display: block;
        font-family: "JeanLucWeb-Thin", sans-serif;
        font-weight: normal;
        font-size: 43px;
        font-style: normal;
      }
    }

    img {
      @extend .sepiaish-img;
      position: absolute;
      left: 0;
      top: 0;
      right: 0;
      width: 100%;
      height: 100%;

      object-fit: cover;
      z-index: 1;
    }
  }

  &#page2 {
    position: relative;
    article {
      position: relative;
      z-index: 2;
      margin: $m;
      display: grid;
      grid-template-columns: 1fr 1fr;
      grid-gap: $m;
    }

    h3 {
      font-weight: bold;
      color: nth(nth($palettes, 1), 1);
      font-size: 23px;
      line-height: 28px;
    }
    h4 {
      margin-top: $m / 2;
      font-weight: 300;
      font-size: 16px;
      line-height: 21px;
    }
    article {
      p {
        font-family: "IBM Plex Serif", serif;
        font-size: 11px;
        line-height: 15px;
        font-weight: 500;
        & + p {
          margin-top: $m/3;
        }
      }
    }
    .map {
      position: absolute;
      bottom: 0;
      left: 0;
      z-index: 1;

      display: flex;
      flex-direction: column;
      justify-content: flex-end;
    }
    p.caption {
      font-family: "IBM Plex Mono", monospace;
      font-size: 13px;
      color: nth(nth($palettes, 1), 1);
      position: absolute;
      bottom: $m;
      left: $m;
    }
  }

  &#page3 {
    display: flex;
    flex-direction: column;

    h3 {
      font-family: "JeanLucWeb-Thin", sans-serif;
      text-transform: uppercase;
      font-size: 27px;
      line-height: 29px;
      color: nth(nth($palettes, 1), 1);
      z-index: 3;

      margin-bottom: $m/2;
    }

    header {
      position: relative;
      .img-container {
        width: 100%;
        height: 0;
        padding: 58% 0 0 0;
        overflow: hidden;
        position: relative;
        img {
          width: 100%;
          height: 100%;
          object-fit: cover;
          position: absolute;
          left: 0;
          right: 0;
          top: 0;
          bottom: 0;
        }
      }
      img {
        @extend .sepiaish-img;
      }
    }
    .uma-vida-um-evento {
      margin: $m;
      font-size: 10px;
      line-height: 15px;
      columns: 2;
      column-gap: $m;
      p + p {
        text-indent: $m/2;
      }
    }
  }

  &#page4 {
    padding: $m;
    .question_answer {
      h3 {
        color: nth(nth($palettes, 1), 1);
        font-family: "IBM Plex Mono", monospace;
        font-size: 10px;
      }
      .question {
        font-size: 16px;
        line-height: 21px;
        & + h3 {
          margin-top: $m/2;
        }
      }
      .answer {
        font-size: 11px;
        line-height: 15px;
        font-style: italic;
      }
    }

    .the-team img {
      @extend .sepiaish-img;
    }
  }
}

